--- a/css/responsive.css
+++ b/css/responsive.css
@@ -834,7 +834,7 @@
 			background: #011a48;
 			color: #fff;
 			border-bottom-left-radius: 5px;
-			border-top-left-radius: 5px;
+			border-mid-left-radius: 5px;
 		}
 		.serImg img {
 			width: 50%;
