--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,10 @@ body {
   background: linear-gradient(to right, #fff1b4 0%, #ffe3b3 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#960605', endColorstr='#1c0000', GradientType=1);
   color: #000;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Spartan', sans-serif;
+  /* font-family: 'Montserrat', sans-serif;
+font-family: 'Poppins', sans-serif;
+font-family: 'Spartan', sans-serif; */
   font-size: 14px;
   font-weight: 400;
 }
@@ -248,7 +251,16 @@ p {
 
 /*==== Main-css ====*/
 
+
+
+
 /*==== Header ====*/
+
+
+section.top-header {
+  padding: 10px 0;
+  background: #f1752b;
+}
 
 ul.contactSec {
   width: 100%;
@@ -302,35 +314,58 @@ ul.contactSec li a span i {
   right: -17px;
 }
 
-.top-mid {
+.top-left ul li {
+  display: inline-block;
+}
+.top-left ul li a {
+  display: block;
+  padding: 0 20px 0 0;
+  color: #fff;
+}
+.top-left {
 	display: flex;
 	flex-wrap: wrap;
 	align-content: center;
   text-align: center;
 }
-.top-mid form {
-	width: 100%;
+.col-md-6.top-left p {
+  color: #fff;
+  font-family: 'Spartan', sans-serif;
 }
-.top-mid form input[type="text"] {
-  width: 85%;
+.search_form {
+  width: 15%;
+  margin-left: auto;
+  float: right;
+  position: relative;
+}
+.search_filed {
+  width: 100%;
   padding: 15px;
   color: #000;
   font-size: 13px;
   border-radius: 5px;
   border: 1px solid #dcdcdc;
+  visibility: hidden;
+  position: relative;
+  right: 0px;
 }
-.top-mid form input[type="submit"] {
+.open_field {
+  width: 55%;
+}
+.top-right form input[type="submit"] {
   background: #fbc726 url(../images/search@3x.png) no-repeat 0 0;
   border: 1px solid #fbc726;
   padding: 15px 40px;
   font-size: 13px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-radius: 5px;
   color: #fff;
   margin-left: -8px;
   background-position: center;
   background-size: 30px;
   text-indent: -100000px;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .page-btn a {
@@ -344,8 +379,8 @@ ul.contactSec li a span i {
 	background: #1cc8ae;
 }
 .page-btn {
-	float: left;
-	margin-right: 21px;
+  float: left;
+  margin-left: 21px;
 }
 
 .user-login ul {
@@ -356,7 +391,7 @@ ul.contactSec li a span i {
 }
 .user-login ul li a {
 	font-size: 13px;
-	color: #000;
+	color: #fff;
 }
 .user-login ul li a i {
   width: 30px;
@@ -368,23 +403,29 @@ ul.contactSec li a span i {
   margin-right: 5px;
   color: #fb5859;
 }
-.top-right {
+.mid-right {
 	padding: 10px 15px;
 	text-align: right;
 }
-.top-header {
+.mid-header {
   padding: 10px;
   background: #f5f5f5;
 }
-.top-mid, .top-left, .top-right {
+.mid-mid, .mid-left, .mid-right {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
 }
 .user-login {
-  margin: 12px auto;
+  width: 80%;
+  float: left;
+  margin-left: auto;
+  text-align: right;
+  margin-top: 7px;
 }
-
+.reduce_size {
+  width: 42%;
+}
 
 
 
@@ -428,10 +469,10 @@ ul.menu-nav li ul li {
   position: relative;
 }
 ul.menu-nav li a {
-  font-size: 16px;
+  font-size: 12px;
   color: #000;
-  font-weight: 600;
-  padding: 25px;
+  font-weight: 500;
+  padding: 20px 10px;
   display: block;
   position: relative;
 }
@@ -479,6 +520,15 @@ ul.menu-nav li:hover::after, ul.menu-nav li ul li:hover::after {
 }
 .catagories {
   margin: auto 0;
+}
+.catagories a i {
+  padding: 10px;
+  color: #fff;
+  background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
+  background: -webkit-linear-gradient(left, #e4340d 0%, #f27a2e 100%);
+  background: linear-gradient(to right, #e4330d 0%, #f27a2e 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#960605', endColorstr='#1c0000', GradientType=1);
+  font-size: 22px;
 }
 .catagory-menu ul li a img {
   width: 20%;
@@ -572,17 +622,15 @@ button.owl-next {
 
 /*====== Catagories =======*/
 .catagory-menu {
-  width: 300px;
-  height: 462px;
-  background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
-  background: -webkit-linear-gradient(left, #e4340d 0%, #f27a2e 100%);
-  background: linear-gradient(to right, #e4330d 0%, #f27a2e 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#960605', endColorstr='#1c0000', GradientType=1);
-  position: absolute;
-  top: 0;
-  z-index: 999;
-  left: 0;
-  display: none;
+    width: 300px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    left: 0;
+    display: none;
+    background: #efefef;
+    right: auto;
 }
 .catagory-menu ul li {
   margin: 10px;
@@ -603,7 +651,7 @@ button.owl-next {
   font-size: 16px;
   font-weight: 500;
   vertical-align: middle;
-  color: #fff;
+  color: #000;
   display: block;
 }
 section.banner-sec {
@@ -619,7 +667,7 @@ section.banner-sec {
   display: none;
 }
 .left-side-pro .pro-image {
-  background: #f6f6f6;
+  /* background: #f6f6f6; */
   display: flex;
   flex-wrap: wrap;
   align-content: center;
@@ -676,7 +724,10 @@ section.banner-sec {
   width: 90%;
   overflow: hidden;
 }
-
+.product-descrp {
+  /* background: #f6f6f6; */
+  padding: 14px;
+}
 .product-display {
   padding: 80px 0px 0;
   background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
@@ -685,7 +736,7 @@ section.banner-sec {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#960605', endColorstr='#1c0000', GradientType=1);
 }
 .pro-image {
-  background: #f6f6f6;
+  /* background: #f6f6f6; */
   display: flex;
   flex-wrap: wrap;
   align-content: center;
@@ -698,20 +749,20 @@ section.banner-sec {
 }
 
 .pro-details p {
-  font-size: 16px;
-  color: #000;
-  font-weight: 700;
+  font-size: 14px;
+  color: rgb(0, 0, 0);
+  font-weight: 500;
   width: 100%;
   text-align: left;
   margin-bottom: 15px;
 }
 .pro-details h5 {
-  font-size: 16px;
-  color: #A7A7A7;
-  width: 50%;
-  float: right;
-  text-align: right;
-	font-weight: 700;
+  font-size: 14px;
+  color: #333;
+  width: 100%;
+  text-align: left;
+  font-weight: 700;
+  margin-bottom: 15px;
 }
 .pro-details h5 span {
   font-weight: 700;
@@ -719,7 +770,7 @@ section.banner-sec {
   margin-left: 0px;
 }
 .pro-details h4 {
-  font-size: 18px;
+  font-size: 20px;
   color: #000;
   font-weight: 700;
   width: 50%;
@@ -781,6 +832,7 @@ section.banner-sec {
 }
 .page-btn2 {
   float: left;
+  width: 100%;
 }
 .page-btn2 a {
   color: #fff;
@@ -788,6 +840,8 @@ section.banner-sec {
   padding: 15px 30px;
   font-weight: 400;
   border-radius: 50px;
+  display: block;
+  text-align: center;
   background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
   background: -webkit-linear-gradient(left, #3d4095 0%, #1c95c3 100%);
   background: linear-gradient(to right, #3d4095 0%, #1c95c3 100%);
@@ -997,8 +1051,8 @@ section.select-option-page {
 	.responsive-tabs-container[class*="accordion-"] .tab-pane {
 		border: 1px solid #ddd;
 		border-top: none;
-		border-top-left-radius: 0;
-		border-top-right-radius: 0;
+		border-mid-left-radius: 0;
+		border-mid-right-radius: 0;
 		border-width: medium 1px 1px;
 		margin-bottom: 10px;
 		margin-top: -10px;
@@ -1022,8 +1076,8 @@ section.select-option-page {
 	.responsive-tabs-container[class*="accordion-"] .tab-pane {
 		border: 1px solid #ddd;
 		border-top: none;
-		border-top-left-radius: 0;
-		border-top-right-radius: 0;
+		border-mid-left-radius: 0;
+		border-mid-right-radius: 0;
 		border-width: medium 1px 1px;
 		margin-bottom: 10px;
 		margin-top: -10px;
@@ -1069,14 +1123,17 @@ section.footer {
   margin-top: 20px;
   color: #E76D27;
   line-height: 22px;
+  font-weight: 500;
   text-transform: uppercase;
   margin-bottom: 20px;
+  font-family: 'Spartan', sans-serif;
 }
 .each-footer p, .each-footer p a {
-  font-size: 16px;
+  font-size: 14px;
   margin-bottom: 0;
   color: #000;
   line-height: 22px;
+  font-family: 'Poppins', sans-serif;
 }
 .each-footer form  {
   width: 50%;
