--- a/css/style.css
+++ b/css/style.css
@@ -732,7 +732,11 @@ section.banner-sec {
   margin: 0 auto 20px;
   width: 100%;
 }
-
+.left-side-pro .item {
+  width: 100%;
+  height: 520px;
+  padding: 25px 0;
+}
 
 
 
@@ -749,29 +753,35 @@ section.banner-sec {
 
 
 
-.product-display h5 {
-	float: left;
+.page-title h5 {
+  float: right;
+  margin: 0px 20px 0px 0px;
 }
 .product-display h5 a {
-  font-size: 15px;
+  font-size: 12px;
   font-weight: 500;
-  background: #8a0505;
   display: inline-block;
   color: #fff;
-  padding: 5px 20px;
+  padding: 10px 30px;
   border-radius: 5px;
+  background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
+  background: -webkit-linear-gradient(left, #e4340d 0%, #f27a2e 100%);
+  background: linear-gradient(to right, #e4330d 0%, #f27a2e 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#960605', endColorstr='#1c0000', GradientType=1);
 }
 .product-slider {
 	margin: 30px 0 0 0px;
 }
 .page-title {
-  width: 90%;
+  width: 100%;
   overflow: hidden;
+  margin-bottom: 40px;
 }
 .product-descrp {
   background: #f6f6f6;
   padding: 14px;
 }
+
 .product-display {
   padding: 80px 0px 0;
   background: -moz-linear-gradient(left, #960605 0%, #1c0000 100%);
@@ -915,17 +925,25 @@ section.banner-sec {
   margin: 0 20px 0 0;
 }
 .wishlist {
-  background: url(../images/sprite.png) no-repeat 0 0;
-  background-position: 0 0;
+  background: #f6f6f6 url(../images/sprite.png) 1px 2px no-repeat;
   width: 30px;
   height: 30px;
   position: absolute;
   top: 20px;
-  right: 20px;
+  right: -20px;
+  opacity: 0;
+  transition: all ease-in-out 0.5s;
+  -webkit-transition: all ease-in-out 0.5s;
+  -moz-transition: all ease-in-out 0.5s;
 }
 .wishlist:hover {
-  background: url(../images/sprite.png) no-repeat 0 0; 
-  background-position: -30px 0;
+  background: #f6f6f6 url(../images/sprite.png) no-repeat 0 0; 
+  background-position: -28px 3px;
+}
+.product-descrp:hover .wishlist  {
+  right: 20px;
+  opacity: 1;
+  
 }
 
 button:focus{
